force-app/main/default/objects/Pickup_Instructions__c/Pickup_Instructions__c.object-meta.xml
<CustomObject>
    <label>Pickup Instruction</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Pickup Instructions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pickup Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>