force-app/main/default/objects/Pickup_Instructions__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Child</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipLabel>Pickup Instructions</relationshipLabel>
    <relationshipName>Pickup_Instructions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>