force-app/main/default/objects/Pickup_Instructions__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Details of the pickup</description>
    <inlineHelpText>Please enter the details of the pickup</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>